Keystone plan rewrite; use tarball instead of git

--- a/plans/keystone/config/keystone-uwsgi-admin.ini
+++ b/plans/keystone/config/keystone-uwsgi-admin.ini
@@ -1,23 +1,7 @@
 [uwsgi]
-wsgi-file = {{pkg.svc_path}}/keystone-wsgi-admin
-
-# Versions of mod_proxy_uwsgi>=2.0.6 should use a UNIX socket, see
-# http://uwsgi-docs.readthedocs.org/en/latest/Apache.html#mod-proxy-uwsgi
-uwsgi-socket = 127.0.0.1:35358
-
-# Override the default size for headers from the 4k default.
-buffer-size = 65535
-
-# This is running standalone
-master = true
-
+wsgi-file = {{pkg.path}}/bin/keystone-wsgi-admin
+uwsgi-socket = {{sys.ip}}:35358
+buffer-size = {{cfg.buffer-size}}
 enable-threads = true
-
-# Tune this to your environment.
-processes = 4
-
-# uwsgi recommends this to prevent thundering herd on accept.
+processes = {{cfg.processes}}
 thunder-lock = true
-
-plugins = python
-
