--- a/plans/keystone/config/uwsgi-keystone.conf
+++ b/plans/keystone/config/uwsgi-keystone.conf
@@ -2,12 +2,12 @@ Listen 5000
 Listen 35357
 
 <VirtualHost *:5000>
-    ProxyPass / uwsgi://127.0.0.1:5001/
+    ProxyPass / uwsgi://{{sys.ip}}:5001/
 </VirtualHost>
 
 <VirtualHost *:35357>
-    ProxyPass / uwsgi://127.0.0.1:35358/
+    ProxyPass / uwsgi://{{sys.ip}}:35358/
 </VirtualHost>
 
-ProxyPass /identity uwsgi://127.0.0.1:5001/
-ProxyPass /identity_admin uwsgi://127.0.0.1:35358/
+ProxyPass /identity uwsgi://{{sys.ip}}:5001/
+ProxyPass /identity_admin uwsgi://{{sys.ip}}:35358/
