Update keystone, cinder plans to Ocata release

--- a/plans/keystone/config/keystone.conf
+++ b/plans/keystone/config/keystone.conf
@@ -15,6 +15,7 @@ driver = keystone.policy.backends.sql.Policy
 [memcache]
 servers =
 [database]
+connection = sqlite://{{pkg.path}}/keystone.db
 #connection = mysql://keystone:mypass@{{sys.ip}}:3306/keystone?charset=utf8
 [oslo_messaging_rabbit]
 rabbit_userid = admin
