sync keystone.conf with Ocata; depend only on core plans

--- a/plans/keystone/config/keystone.conf
+++ b/plans/keystone/config/keystone.conf
@@ -1,8 +1,10 @@
+[fernet_tokens]
+key_repository = {{pkg.path}}/etc/keystone/fernet-tokens
 [DEFAULT]
-rpc_backend = rabbit
-admin_token = openstack_identity_bootstrap_token
-public_endpoint = http://{{sys.ip}}:5000/
-admin_endpoint = http://{{sys.ip}}:35357/
+log_dir = /var/log/keystone
+public_endpoint = http://0.0.0.0:5000/
+admin_endpoint = http://0.0.0.0:35357/
+transport_url = rabbit://admin:mypass@0.0.0.0:5672/
 [assignment]
 driver = keystone.assignment.backends.sql.Assignment
 [auth]
@@ -15,10 +17,4 @@ driver = keystone.policy.backends.sql.Policy
 [memcache]
 servers =
 [database]
-connection = sqlite://{{pkg.path}}/keystone.db
-#connection = mysql://keystone:mypass@{{sys.ip}}:3306/keystone?charset=utf8
-[oslo_messaging_rabbit]
-rabbit_userid = admin
-rabbit_password = mypass
-[paste_deploy]
-config_file = {{pkg.svc_path}}/config/keystone-paste.ini
+connection = mysql://keystone:mypass@0.0.0.0:3306/keystone?charset=utf8
